# dxtbx

./: .azure-pipelines.yml  .bumpversion.cfg  .codecov.yml  .flake8  .git-notifier  .gitignore  .pre-commit-config.yaml  .python3-test-failures  .travis.yml  AUTHORS  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  README.md  SConscript  __init__.py  build.py  build.sh  conftest.py  datablock.py  dependencies.yaml  ext.py  filecache.py  filecache_controller.py  hatch_build.py  image_average.py  image_set.py  image_set_factory.py  imageset.h  imageset.py  imageset2.py  libtbx_config  libtbx_refresh.py  pyproject.toml  pytest.ini  run_tests.py  sequence_filenames.py  setup.cfg  setup.py  sweep.py  (+2 more)
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-mac.yml  azure-pipelines.yml  bootstrap.py  ci-conda-env.txt  ci-dependencies.yaml  flake8-validation.py  lint-validation.py  unix-build-v2.yml  unix-build.yml  windows-build.yml
.github/: ci-dependencies.yaml  lockdown.yml  meta.yaml.template  parse_dependencies.py  prepare_conda_build.py
.travis/: clean-cctbx  python2-supported-files  run-flake8  setup-base  setup-base3  update-cctbx
array_family/: flex.py
boost_python/: compression.cc  compression.h  ext.cpp  imageset_ext.cc  to_ewald_sphere_helpers.cc
cmake/: module_libraries.json  read_env.py
command_line/: debug_memory.py  depends_on.py  detector_superpose.py  display_parallax_correction.py  dlsnxs2cbf.py  export_bitmaps.py  image2pickle.py  image_average.py  import_datablock.py  install_format.py  overload.py  plot_detector_models.py  print_beam_centre.py  print_header.py  print_matching_images.py  print_sequence.py  print_sequence_check.py  print_sweep.py  print_sweep_check.py  print_total.py  pytest_launcher.py  radial_average.py  read_sequence.py  read_sweep.py  saturation.py  serialize.py  show_mask_info.py  show_matching_formats.py  show_registry.py  to_ewald_sphere.py  to_xds.py
data/: detectors.lib
example/: resolution_corners.py  to_xds.py
format/: Format.py  FormatBruker.py  FormatBrukerFixedChi.py  FormatBrukerPhotonII.py  FormatCBF.py  FormatCBFCspad.py  FormatCBFFromTiff.py  FormatCBFFull.py  FormatCBFFullBrukerPhotonII.py  FormatCBFFullByteOffset.py  FormatCBFFullPilatus.py  FormatCBFFullPilatusCdTe300K.py  FormatCBFFullPilatusDLS300KSN104.py  FormatCBFFullPilatusDLS6MSN100.py  FormatCBFFullPilatusDLS6MSN126.py  FormatCBFFullPilatusDLSI19.py  FormatCBFMini.py  FormatCBFMiniADSCHF4M.py  FormatCBFMiniEiger.py  FormatCBFMultiTile.py  (+154 more)
src/dxtbx/: CMakeLists.txt  __init__.py  datablock.py  dxtbx_ext.pyi  dxtbx_flumpy.pyi  dxtbx_format_image_ext.pyi  dxtbx_format_nexus_ext.pyi  dxtbx_imageset_ext.pyi  dxtbx_masking_ext.pyi  dxtbx_model_ext.pyi  error.h  ext.py  filecache.py  filecache_controller.py  flumpy.py  imageset.h  imageset.py  imageset_py.py  sequence_filenames.py  version.py
src/dxtbx/array_family/: flex_table.h  flex_table_suite.h
src/dxtbx/array_family/boost_python/: flex_table_suite.h
src/dxtbx/boost_python/: compression.cc  compression.h  ext.cpp  flumpy.cc  imageset_ext.cc  to_ewald_sphere_helpers.cc
src/dxtbx/command_line/: any2nexus.py  debug_memory.py  depends_on.py  detector_superpose.py  display_parallax_correction.py  dlsnxs2cbf.py  image2pickle.py  image_average.py  install_format.py  overload.py  plot_detector_models.py  print_header.py  print_matching_images.py  radial_average.py  read_sequence.py  saturation.py  show_mask_info.py  show_matching_formats.py  show_registry.py
src/dxtbx/data/: detectors.lib
src/dxtbx/data/beamline_defs/: PILATUS_2M_S_N_24_0107_Diamond.py  PILATUS_300K_S_N_3_0104_Diamond.py  __init__.py
src/dxtbx/example/: resolution_corners.py  to_xds.py
src/dxtbx/format/: Format.py  FormatBruker.py  FormatBrukerED1.py  FormatBrukerELA.py  FormatBrukerFixedChi.py  FormatBrukerModern.py  FormatBrukerPhoton.py  FormatBrukerPhotonII.py  FormatCBF.py  FormatCBFCspad.py  FormatCBFFull.py  FormatCBFFullByteOffset.py  FormatCBFFullPilatus.py  FormatCBFFullPilatusDLS300KSN104.py  FormatCBFFullPilatusDLS6MSN100.py  FormatCBFFullPilatusDLS6MSN126.py  FormatCBFMini.py  FormatCBFMiniADSCHF4M.py  FormatCBFMiniEiger.py  FormatCBFMiniEigerChessID7B2.py  FormatCBFMiniEigerDLS16MSN160.py  FormatCBFMiniEigerMaxIVBio.py  FormatCBFMiniEigerPetraP13.py  FormatCBFMiniEigerPetraP14.py  FormatCBFMiniEigerPhotonFactory.py  FormatCBFMiniEigerQuadro.py  FormatCBFMiniEigerQuadroED1.py  FormatCBFMiniEigerReverse.py  FormatCBFMiniPilatus.py  FormatCBFMiniPilatus3APS19ID6MSN132.py  FormatCBFMiniPilatusCHESS_6MSN127.py  FormatCBFMiniPilatusDESY6MSN115.py  FormatCBFMiniPilatusDLS12M.py  FormatCBFMiniPilatusDLS6MSN100.py  FormatCBFMiniPilatusDLS6MSN114.py  FormatCBFMiniPilatusDLS6MSN114DMM.py  FormatCBFMiniPilatusDLS6MSN119.py  FormatCBFMiniPilatusDLS6MSN126.py  FormatCBFMiniPilatusHelpers.py  FormatCBFMiniPilatusReverse.py  (+135 more)
src/dxtbx/format/boost_python/: cbf_read_buffer.cpp  cbf_read_buffer.h  image_ext.cc  nexus_ext.cc
src/dxtbx/masking/: SConscript  __init__.py  goniometer_shadow_masking.h  masking.h
src/dxtbx/masking/boost_python/: ext.cc
src/dxtbx/model/: __init__.py  beam.h  beam.py  compare.py  crystal.h  crystal.py  detector.h  detector.py  detector_helpers.py  detector_helpers_types.py  experiment.h  experiment_list.h  experiment_list.py  goniometer.h  goniometer.py  history.h  kappa_goniometer.h  model_helpers.h  multi_axis_goniometer.h  panel.h  panel_data.h  parallax_correction.h  pixel_to_millimeter.h  profile.py  ray_intersection.h  scan.h  scan.py  scan_helpers.h  scan_helpers.py  sequence.h  sequence.py  tof_helpers.py  virtual_panel.h
src/dxtbx/model/boost_python/: beam.cc  crystal.cc  detector.cc  experiment.cc  experiment_list.cc  goniometer.cc  history.cc  kappa_goniometer.cc  model_ext.cc  multi_axis_goniometer.cc  panel.cc  pickle_suite.h  pixel_to_millimeter.cc  scan.cc  scan_helpers.cc  sequence.cc  spectrum.cc  to_from_dict.h
src/dxtbx/nexus/: __init__.py  nxmx.py
src/dxtbx/serialize/: filename.py  imageset.py  load.py  xds.py
src/dxtbx/util/: __init__.py  dlsnxs2cbf.py  rotate_and_average.py
(+722 files in other folders)
