[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dxtbx"
version = "3.26.0"
description = "Diffraction Experiment Toolkit"
authors = [
    { name = "Diamond Light Source", email = "dials-user-group@jiscmail.net" },
]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["entry-points", "scripts"]

[project.urls]
Homepage = "https://dials.github.io"
Repository = "https://github.com/cctbx/dxtbx"

[tool.hatch.metadata.hooks.custom.entry-points]

[tool.towncrier]
package = "dxtbx"
package_dir = ".."
filename = "CHANGELOG.rst"
issue_format = "`#{issue} <https://github.com/cctbx/dxtbx/issues/{issue}>`_"


[tool.ruff.lint]
select = ["E", "F", "W", "C4", "I"]
unfixable = ["F841"]
# E501 line too long (handled by formatter)
# E741 Ambiguous variable name (We have lots of meaningful I, L, l)
ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
"installer/**.py" = ["I"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["dxtbx_*", "dxtbx"]
required-imports = ["from __future__ import annotations"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "cctbx",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"cctbx" = [
    "boost",
    "boost_adaptbx",
    "cbflib_adaptbx",
    "cctbx",
    "chiltbx",
    "clipper_adaptbx",
    "cma_es",
    "cootbx",
    "crys3d",
    "cudatbx",
    "fable",
    "fast_linalg",
    "fftw3tbx",
    "gltbx",
    "iota",
    "iotbx",
    "libtbx",
    "mmtbx",
    "omptbx",
    "prime",
    "rstbx",
    "scitbx",
    "serialtbx",
    "simtbx",
    "smtbx",
    "spotfinder",
    "tbxx",
    "ucif",
    "wxtbx",
    "xfel",
]

[tool.mypy]
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-rsxX"
filterwarnings = [
    "ignore:the matrix subclass is not the recommended way:PendingDeprecationWarning",
    "ignore:numpy.dtype size changed:RuntimeWarning",
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
    "ignore:`product` is deprecated as of NumPy:DeprecationWarning:h5py|numpy",
]
